# hyperhandler

./: .gitignore  .golangci.yml  ARCHITECTURE.md  CLAUDE.md  LICENSE  Makefile  README.md  go.mod  go.sum  hlhandler-spec.md  pyproject.toml  risk_management_hyperliquid_perps.openspec.md
.github/workflows/: go.yml
cmd/hyperhandler/: main.go
config/: config.example.yaml
docs/: position-sizing.md  testing.md
internal/cli/: cli_test.go  config.go  doc.go  helpers.go  render.go  render_test.go  risk.go  root.go  trading.go  vaults.go  wallet.go
internal/client/: base.go  base_test.go  doc.go  errors.go  exchange.go  exchange_test.go  info.go  info_test.go  vault.go  vault_test.go
internal/config/: config.go  config_test.go  doc.go  network.go
internal/decimalx/: decimalx.go
internal/golden/: golden.go  golden_test.go
internal/models/: doc.go  models_test.go  order.go  risk.go  signal.go  signal_test.go  validator.go  validator_test.go  vault.go
internal/order/: builder.go  builder_test.go  doc.go  payload.go  payload_golden_test.go  payload_test.go
internal/risk/: calculator.go  calculator_test.go  circuit_breaker.go  circuit_breaker_test.go  collector.go  collector_test.go  config.go  config_test.go  doc.go  export_test.go  golden_test.go  manager.go  manager_test.go
internal/service/: cancel.go  doc.go  evaluate.go  exec.go  (+5 more)
scripts/: e2e-testnet.sh
specs/: TEMPLATE.md  draft-refactoring-modular-structure.md  draft-risk-integration-tests.md  golang-migration.md  risk-management.md  risk-resilience-hardening.md
tests/: __init__.py  conftest.py
(+106 files in other folders)
